--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Generate Snake
-        uses: Platane/snk@master
+      - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: westkitekim
@@ -35,7 +35,7 @@ jobs:
           
       # 변경사항 push
       - name: Push changes
-        uses: ad-m/github-push-action@master
+      - uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
