--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,22 @@
-# This is a basic workflow to help you get started with Actions
+name: Generate Snake
 
-name: CI
+# Action이 언제 구동될지 결정
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
   schedule:
     # 6시간마다 한 번(수정 가능)
     - cron: "0 */6 * * *"
-  # Allows you to run this workflow manually from the Actions tab
+
+  # 자동으로 Action이 실행되도록 함
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-      - uses: actions/checkout@v3
-      
-      - name: Generate Snake
+      - uses: actions/checkout@v2
+
+      # 뱀 생성
       - uses: Platane/snk@master
         id: snake-gif
         with:
@@ -30,15 +24,15 @@ jobs:
           # output branch에 gif, svg를 각각 생성
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
-          
+
       - run: git status
-          
+
       # 변경사항 push
       - name: Push changes
-      - uses: ad-m/github-push-action@master
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
+          branch: master
           force: true
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
